# Tars

./: .gitattributes  .gitignore  .gitmodules  CLA.md  ChangeList.md  ChangeList.zh.md  Contributing.md  Deploy.md  Deploy.zh.md  Install.en.md  Install.md  Install.zh.md  Install_faq.md  Install_faq.zh.md  Introduction.en.md  Introduction.md  Introduction.zh.md  LICENSE  LICENSE.TXT  LICENSE.md  README.en.md  README.md  README.zh.md  Tars.sln  tag.sh  tars-deploy-framework.sh  tars-deploy-tars.sh  tars-latest-deploy-framework.sh  tars-latest-deploy-tars.sh  tars-ubuntu.sh  test-deploy-framework.sh
cpp/framework/: CMakeLists.txt  README.md
cpp/framework/AdminRegistryServer/: AdminRegistryImp.cpp  AdminRegistryImp.h  AdminRegistryServer.h  CMakeLists.txt  DbProxy.cpp  DbProxy.h  ExecuteTask.cpp  ExecuteTask.h  util.h
cpp/framework/AuthServer/: AuthImp.cpp  AuthImp.h  AuthServer.cpp  AuthServer.h  CMakeLists.txt  main.cpp
cpp/framework/ConfigServer/: CMakeLists.txt  ConfigImp.cpp  ConfigImp.h  ConfigServer.cpp  main.cpp
cpp/framework/LogServer/: CMakeLists.txt  LogImp.cpp  LogImp.h  LogServer.cpp  LogServer.h
cpp/framework/NodeServer/: Activator.cpp  Activator.h  BatchPatchThread.h  CMakeLists.txt  CommandDestroy.h  CommandPatch.h  CommandStart.h  CommandStop.h  KeepAliveThread.cpp  KeepAliveThread.h  NodeImp.cpp  NodeRollLogger.h  NodeServer.cpp  NodeServer.h  PlatformInfo.h  PropertyReporter.h  RegistryProxy.h  RemoveLogThread.cpp  RemoveLogThread.h  ReportMemThread.cpp  ReportMemThread.h  ServerFactory.cpp  ServerImp.cpp  ServerLimitResource.h  ServerObject.cpp  ServerObject.h  SingleFileDownloader.cpp  SingleFileDownloader.h  main.cpp  util.h
cpp/framework/NotifyServer/: CMakeLists.txt  LoadDbThread.cpp  LoadDbThread.h  NotifyImp.cpp  NotifyServer.cpp  NotifyServer.h  main.cpp
cpp/framework/PatchServer/: PatchCache.cpp  PatchCache.h  PatchImp.cpp  PatchImp.h  PatchServer.cpp  PatchServer.h  main.cpp
cpp/framework/PropertyServer/: CMakeLists.txt  PropertyDbManager.cpp  PropertyHashMap.h  PropertyImp.cpp  PropertyImp.h  PropertyReapThread.cpp
cpp/framework/QueryPropertyServer/: CMakeLists.txt  DbProxy.cpp  DbProxy.h  DbThread.cpp  DbThread.h  QueryDbThread.cpp  QueryImp.h  QueryItem.h  QueryServer.h  RequestDecoder.cpp  RequestDecoder.h
cpp/framework/QueryStatServer/: DbProxy.cpp  DbProxy.h  DbThread.cpp  DbThread.h  QueryDbThread.cpp  QueryDbThread.h  QueryImp.cpp  QueryImp.h  QueryServer.cpp  QueryServer.h  RequestDecoder.cpp
cpp/framework/RegistryServer/: CheckNodeThread.cpp  CheckNodeThread.h  DbHandle.cpp  QueryImp.cpp  QueryImp.h  ReapThread.cpp  RegistryImp.cpp  RegistryImp.h  RegistryProcThread.cpp  RegistryProcThread.h  RegistryServer.cpp  RegistryServer.h
cpp/framework/StatServer/: ReapSSDThread.cpp  StatDbManager.h  StatHashMap.h  StatImp.cpp  StatImp.h  StatServer.cpp  StatServer.h
cpp/framework/conf/: tars.default  tars.tarsconfig  tars.tarsjava.default  tars.tarslog  tars.tarsnotify  tars.tarspatch  tars.tarsproperty  tars.tarsstat
cpp/framework/deploy/: tars_install.sh  tarsnode_install.sh
cpp/framework/patchclient/: CMakeLists.txt  patchclient.cpp  tars_patch.cpp
cpp/framework/protocol/: AdminReg.tars  CMakeLists.txt  Node.tars  Registry.tars  RegistryDescriptor.tars
cpp/framework/sql/: db_tars.sql  dump-sql.sh  exec-sql.sh
cpp/framework/tarsconfig.xcodeproj/: project.pbxproj
cpp/servant/: CMakeLists.txt  README.md
cpp/servant/jmem/: jmem_hashmap.h  jmem_hashmap_compact.h  jmem_multi_hashmap.h  jmem_queue.h  jmem_rbtree.h
cpp/servant/libservant/: AdapterProxy.cpp  AdminServant.cpp  AppCache.cpp  AppProtocol.cpp  Application.cpp  AuthLogic.cpp  BaseNotify.cpp  CMakeLists.txt  Communicator.cpp  CommunicatorEpoll.cpp  CoroutineScheduler.cpp  EndpointInfo.cpp  EndpointManager.cpp  NetworkUtil.cpp  NotifyObserver.cpp  ObjectProxy.cpp  ServantHandle.cpp  ServantHelper.cpp  ServantProxy.cpp  ServantProxyFactory.cpp  StatReport.cpp  TarsConfig.cpp  TarsCurrent.cpp  TarsLogger.cpp  TarsNodeF.cpp  TarsNotify.cpp  Transceiver.cpp
cpp/servant/makefile/: makefile.tars
cpp/servant/promise/: exception_ptr.h  promise.h  promise_exception.h  tuple.h  when_all.h
cpp/servant/protocol/: AdminF.tars  Auth.tars  BaseF.tars  CMakeLists.txt  ConfigF.tars  NotifyF.tars  PropertyF.tars
cpp/servant/script/: create_http_server.sh  create_tars_server.sh
cpp/servant/servant/: AdapterProxy.h  AppCache.h  AppProtocol.h  Application.h  AuthLogic.h  BaseNotify.h  Communicator.h  CommunicatorEpoll.h  CommunicatorFactory.h  CoroutineScheduler.h  EndpointInfo.h  Global.h  Message.h  NetworkUtil.h  ObjectProxy.h  PropertyReport.h  Servant.h  ServantHandle.h  ServantProxy.h  ServantProxyFactory.h  StatReport.h  TarsConfig.h  TarsCurrent.h  TarsLogger.h  TarsNodeF.h  Transceiver.h
cpp/servant/tup/: CMakeLists.txt  RequestF.tars  Tars.h  TarsDisplayer.h  TarsType.h  tup.h
cpp/test/testUtil/: CMakeLists.txt  example_tc_autoptr.cpp  example_tc_bitmap.cpp  example_tc_cgi.cpp  example_tc_common.cpp  example_tc_config.cpp  example_tc_encoder.cpp  example_tc_file.cpp  example_tc_file_lock.cpp  example_tc_functor.cpp  example_tc_gzip.cpp  example_tc_hashmap.cpp  example_tc_lock.cpp  example_tc_log.cpp  example_tc_loki.cpp  example_tc_mem_queue.cpp  example_tc_mysql.cpp  example_tc_singleton.cpp  example_tc_socket.cpp  example_tc_thread_pool.cpp  log.config.conf  template.config.conf  test.html
cpp/tools/: CMakeLists.txt  README.md
cpp/tools/pb2tarscpp/: CMakeLists.txt  CppGenCallback.cpp  CppGenCallback.h  CppGenProxy.cpp  CppGenProxy.h  CppGenServant.cpp  CppGenServant.h  CppPbUtils.cpp  CppPbUtils.h  CppPlugin.h
cpp/tools/protobuf2tarscpp/: CppPlugin.cpp
cpp/tools/tars2android/: CMakeLists.txt  interface_analysis.cpp  interface_analysis.h  main.cpp  tars2android.cpp  tars_filter.h
cpp/tools/tars2c/: CMakeLists.txt  tars2c.cpp
cpp/tools/tars2cpp/: CMakeLists.txt  main.cpp  tars2cpp.cpp  tars2cpp.h
cpp/tools/tars2cs/: CMakeLists.txt  tars2cs.cpp  tars2cs.h
cpp/tools/tars2go/: CMakeLists.txt  README.md  main.cpp  tars2go.cpp  tars2go.h
(+2286 files in other folders)
